--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,16 @@ services:
                 container_name: mongo-container
                 ports:
                         - "27017:27017"
+        actor-simulator:
+                build: actor-simulator
+                image: actor-simulator
+                container_name: actor-simulator-container
+                environment:
+                        SPRING_DATA_MONGODB_URI: mongodb://mongo:27017
+                depends_on:
+                        - api-gateway
+                        - actor-registry-service
+                restart: always
         api-gateway:
                 build: api-gateway
                 image: api-gateway
@@ -13,6 +23,7 @@ services:
                         - "10113:10113"
                 environment:
                         SPRING_DATA_MONGODB_URI: mongodb://mongo:27017
+                restart: on-failure
         actor-registry-service:
                 build: actor-registry-service
                 image: actor-registry-service
@@ -21,3 +32,4 @@ services:
                         - "40001:40001"
                 environment:
                         SPRING_DATA_MONGODB_URI: mongodb://mongo:27017
+                restart: on-failure
