--- a/status-tracking-service/pom.xml
+++ b/status-tracking-service/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>at.tuwien.dse</groupId>
 	<artifactId>status-tracking-service</artifactId>
+
 	<version>0.0.1-SNAPSHOT</version>
 	<name>status-tracking-service</name>
 	<description>Demo project for Spring Boot</description>
@@ -25,6 +26,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>5.7.1</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -34,6 +42,24 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.12.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.3</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.10.3</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
