--- a/status-tracking-service/src/main/resources/application.properties
+++ b/status-tracking-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
+spring.data.mongodb.uri=mongodb://localhost:27017
