--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,20 +16,24 @@
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
+    "@angular/google-maps": "^9.2.4",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@types/googlemaps": "3.26.15",
     "core-js": "^2.5.4",
+    "net": "^1.0.2",
     "rxjs": "6.0.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.6",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.7",
+    "typescript": "~3.7.5",
+    "@angular/cli": "~9.1.7",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
