--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
         mongo:
                 image: mongo
+                container_name: mongo
                 ports:
                         - "27017:27017"
                 expose:
