--- a/status-tracking-service/pom.xml
+++ b/status-tracking-service/pom.xml
@@ -61,6 +61,16 @@
 			<version>2.10.3</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.26</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>2.28</version>
+		</dependency>
 	</dependencies>
 
 	<build>
