--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "net": "^1.0.2",
     "rxjs": "~6.5.4",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
