implemented status tracking tables (layout only)

--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.7",
     "@angular/compiler": "~9.1.7",
     "@angular/core": "~9.1.7",
+    "@angular/elements": "^9.1.9",
     "@angular/forms": "~9.1.7",
     "@angular/google-maps": "^9.2.4",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "document-register-element": "^1.7.2",
     "net": "^1.0.2",
     "rxjs": "~6.5.4",
     "sockjs-client": "^1.4.0",
