--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>jersey-hk2</artifactId>
 			<version>2.28</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
