Preparing microservices for deployment. Dockerfiles added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,43 +5,58 @@ services:
                 container_name: mongo
                 ports:
                         - "27017:27017"
-                expose:
-                        - 27017
-
         rabbitmq:
                 image: rabbitmq
-                container_name: rabbitmq-container
+                hostname: rabbitmq
+                container_name: rabbitmq
                 ports:
-                - "5672:5672"
-#        actor-simulator:
-#                build: actor-simulator
-#                image: actor-simulator
-#                container_name: actor-simulator-container
-#                depends_on:
-#                        - api-gateway
-#                        - actor-registry-service
-#                restart: always
-#        api-gateway:
-#                build: api-gateway
-#                image: api-gateway
-#                container_name: api-gateway-container
-#                ports:
-#                        - "10113:10113"
-#                expose:
-#                        - 10113
-#                environment:
-#                        SPRING_DATA_MONGODB_URI: mongodb://localhost:27017
-#                #restart: on-failure
-#        actor-registry-service:
-#                build: actor-registry-service
-#                image: actor-registry-service
-#                container_name: actor-registry-service-container
-#                ports:
-#                        - "40001:40001"
-#                environment:
-#                        SPRING_DATA_MONGODB_URI: mongodb://mongo:27017
-#                depends_on:
-#                        - mongo
-#                expose:
-#                        - 40001
-#                #restart: on-failure
+                        - "5672:5672"
+        actor-registry-service:
+                build: actor-registry-service
+                image: actor-registry-service
+                container_name: actor-registry-service
+                ports:
+                      - "40001:40001"
+                expose:
+                      - 40001
+                depends_on:
+                         - mongo
+                restart: on-failure
+        api-gateway:
+                build: api-gateway
+                image: api-gateway
+                container_name: api-gateway
+                ports:
+                        - "10113:10113"
+                expose:
+                        - 10113
+                depends_on:
+                        - actor-registry-service
+                restart: on-failure
+        status-tracking-service:
+                build: status-tracking-service
+                image: status-tracking-service
+                container_name: status-tracking-service
+                depends_on:
+                        - mongo
+                        - rabbitmq
+                        - api-gateway
+                restart: on-failure
+        actor-control-service:
+                build: actor-control-service
+                image: actor-control-service
+                container_name: actor-control-service
+                depends_on:
+                        - mongo
+                        - rabbitmq
+                        - actor-registry-service
+                restart: on-failure
+        actor-simulator:
+                build: actor-simulator
+                image: actor-simulator
+                container_name: actor-simulator
+                depends_on:
+                        - api-gateway
+                        - actor-registry-service
+                restart: on-failure
+
