--- a/actor-control-service/src/main/resources/application.properties
+++ b/actor-control-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb://mongo:27017
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
