how to run locally added in readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
                 container_name: client
                 ports:
                       - "4200:4200"
+                expose:
+                  - 40001
                 depends_on:
                       - api-gateway
                 restart: on-failure
@@ -60,11 +62,11 @@ services:
                       - rabbitmq
                       - actor-registry-service
                 restart: on-failure
-        actor-simulator:
-                build: actor-simulator
-                image: actor-simulator
-                container_name: actor-simulator
-                depends_on:
-                      - api-gateway
-                      - actor-registry-service
-                restart: on-failure
+#        actor-simulator:
+#                build: actor-simulator
+#                image: actor-simulator
+#                container_name: actor-simulator
+#                depends_on:
+#                      - api-gateway
+#                      - actor-registry-service
+#                restart: on-failure
