defined network name in order not use name of directory for network what could bring problems when different directories names are used

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.5'
 services:
         mongo:
                 image: mongo
@@ -62,11 +62,8 @@ services:
                       - rabbitmq
                       - actor-registry-service
                 restart: on-failure
-#        actor-simulator:
-#                build: actor-simulator
-#                image: actor-simulator
-#                container_name: actor-simulator
-#                depends_on:
-#                      - api-gateway
-#                      - actor-registry-service
-#                restart: on-failure
+
+networks:
+  default:
+    name: dse20_default
+    driver: bridge
