--- a/k8s/mongo_rabbit.yaml
+++ b/k8s/mongo_rabbit.yaml
@@ -46,7 +46,7 @@ spec:
       protocol: TCP
       targetPort: 5672
   selector:
-    app: mongo
+    app: rabbitmq
   type: ClusterIP
 ---
 apiVersion: apps/v1
@@ -66,6 +66,6 @@ spec:
         app: rabbitmq
     spec:
       containers:
-        - image: eu.gcr.io/dse20-group-group-02/mongo
+        - image: eu.gcr.io/dse20-group-group-02/rabbitmq
           imagePullPolicy: Always
           name: rabbitmq
