Changed pom - Maven tests were not working with mvn test command. Spring-test has overwritten jUnit.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>dse-group-02</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dse-group-02</name>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<modules>
 		<module>api-gateway</module>
